--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-redux": "^9.1.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
