--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.1.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5"
